Added: Swagger for all api's and radis
