# src/routes/note.route.js
@@ -2,6 +2,7 @@ import express from 'express';
 import * as noteController from '../controllers/note.controller';
 import { noteValidator } from '../validators/user.validator';
 import { userAuth } from '../middlewares/auth.middleware';
+import * as redis from '../middlewares/radis.middleware';
 
 const router = express.Router();
 
@@ -10,7 +11,7 @@ const router = express.Router();
 router.post('', noteValidator, userAuth, noteController.addNote);
 
 // route to get all notes
-router.get('', userAuth, noteController.getAllNotes);
+router.get('', userAuth, redis.redis_data, noteController.getAllNotes);
 
 //route to get a single note by their id
 router.get('/:noteid', userAuth, noteController.getNote);
@@ -20,9 +21,6 @@ router.put('/:noteid', userAuth, noteController.updateNote);
 
 //route to delete a single note by their user id
 router.delete('/:noteid', userAuth, noteController.deleteNote);
-
-//route to archive note 
-router.put('/isarchive/:noteid', userAuth, noteController.archiveNote);
 
 //route to archive note 
 router.put('/isarchive/:noteid', userAuth, noteController.archiveNote);
